[metadata]
name = greenpoint
url = https://github.com/jd/greenpoint
summary = Stock management
description-file =
    README.rst
author = Julien Danjou
classifier =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[global]
setup-hooks =
    pbr.hooks.setup_hook

[extras]
test =
    pytest

[files]
packages =
    greenpoint

[entry_points]
console_scripts =
    greenpoint = greenpoint.cli:main

[wheel]
universal = 1
